Quick fix for the footer on mobile.

--- a/themes/botwiki/src/styles/style.2.46.less
+++ b/themes/botwiki/src/styles/style.2.46.less
@@ -294,6 +294,7 @@ footer ul.footer-list{
   display: inline-block;
   vertical-align: top;
   width: 25%;
+  min-height: 245px;
   @media (max-width : 900px) {
     width: 33%;
   }
